Fixed parameter tree panel overlap issue.

--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/Bundles/Forerunner-all.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/Bundles/Forerunner-all.css
@@ -1509,7 +1509,7 @@ ul.fr-nav-container { display: block; white-space: nowrap; vertical-align: top; 
     background: url("../Images/JSTreeThrobber.gif") center center no-repeat;
 }
 .fr-param-tree-container {
-    z-index: inherit;
+    z-index: 5;
 }
 /*this is for jquery validate default class style, seems static*/
 .error { color: #E80C4D; }
